--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <img src='images/header.svg'/>
       </div>
       <div class='section content'>
-        <img class='illustration' src='images/illustration.svg' />
+          <div class ='illustrtation'>
+        <img src='images/illustration-big.png' style='max-width: 500px;' />
+        </div>
       </div>
       <div class='section sign-up'>
         <img src='images/sign-up.svg'/>
