added a srcset code to html so website can determine which image to use

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <img src='images/header.svg'/>
       </div>
       <div class='section content'>
-          <div class ='illustrtation'>
-        <img src='images/illustration-big.png' style='max-width: 500px;' />
+          <div class ='illustration'>
+        <img src='illustration-small.png' style='max-width: 500px;' 
+                srcset = 'images/illustration-small.png 1x,
+                          images/illustration-big.png 2x'
+                style='max-width: 500px'/>
+
         </div>
       </div>
       <div class='section sign-up'>
